--- a/index.html
+++ b/index.html
@@ -1,75 +1,39 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <meta charset='utf-8'>
-
-  <title>benjaminhawkeslewis/pear @ GitHub</title>
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #98b34c;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #674cb3; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #674cb3; }
-    h3 { text-align: center; color: #674cb3; }
-    a { color: #674cb3; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Benjamin Hawkes-Lewis's PEAR channel on Github</title>
+    <link rel="stylesheet" type="text/css" href="http://benjaminhawkeslewis.github.com/pear//pirum.css" />
+    <link rel="alternate" type="application/rss+xml" href="http://benjaminhawkeslewis.github.com/pear//feed.xml" title="Benjamin Hawkes-Lewis's PEAR channel on Github Latest Releases" />
 </head>
-
 <body>
-  <a href="http://github.com/benjaminhawkeslewis/pear"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+    <div id="doc" class="yui-t7">
+        <div id="hd">
+            <h1>Benjamin Hawkes-Lewis's PEAR channel on Github</h1>
+        </div>
+        <div id="bd">
+            <div class="yui-g">
+                <h2>Using this Channel</h2>
+                <p>This channel is to be used with the PEAR installer.</p>
+                <em>Registering</em> the channel:
+                <pre><code>pear channel-discover benjaminhawkeslewis.github.com</code></pre>
+                <em>Listing</em> available packages:
+                <pre><code>pear remote-list -c benjaminhawkeslewis</code></pre>
+                <em>Installing</em> a package:
+                <pre><code>pear install benjaminhawkeslewis/package_name</code></pre>
+                <em>Installing</em> a specific version/stability:
+                <pre><code>pear install benjaminhawkeslewis/package_name-1.0.0
+pear install benjaminhawkeslewis/package_name-beta</code></pre>
+                <em>Receiving</em> updates via a <a href="http://benjaminhawkeslewis.github.com/pear//feed.xml">feed</a>:
+                <pre><code>http://benjaminhawkeslewis.github.com/pear//feed.xml</code></pre>
 
-  <div id="container">
+                <h2>Packages</h2>
 
-    <div class="download">
-      <a href="http://github.com/benjaminhawkeslewis/pear/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/benjaminhawkeslewis/pear/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+                            </div>
+        </div>
+        <div id="ft">
+            <p><small>The <em>benjaminhawkeslewis.github.com</em> PEAR Channel Server is proudly powered by <a href="http://www.pirum-project.org/">Pirum</a> 1.0.1</small></p>
+        </div>
     </div>
-
-    <h1><a href="http://github.com/benjaminhawkeslewis/pear">pear</a>
-      <span class="small">by <a href="http://github.com/benjaminhawkeslewis">benjaminhawkeslewis</a></span></h1>
-
-    <div class="description">
-      PEAR repository
-    </div>
-
-    <h2>Contact</h2>
-<p> (bhawkeslewis@googlemail.com)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/benjaminhawkeslewis/pear/zipball/master">zip</a> or
-      <a href="http://github.com/benjaminhawkeslewis/pear/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/benjaminhawkeslewis/pear</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/benjaminhawkeslewis/pear">benjaminhawkeslewis/pear</a>
-    </div>
-
-  </div>
-
-  
 </body>
 </html>
