Add release of Thrift PEAR package

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@ pear install benjaminhawkeslewis/package_name-beta</code></pre>
 
                 <h2>Packages</h2>
 
+                                    <h3>thrift<small> - Cross-language RPC protocol</small></h3>
+                    <p>Thrift is a software framework for scalable cross-language services development.</p>
+                    <ul>
+                        <li><strong>Package name</strong>: thrift</li>
+                        <li><strong>License</strong>: Apache Licence, Version 2.0</li>
+                                                <li><strong>Maintainers</strong>: Jake Farrell (as lead)</li>
+                                                <li><strong>Releases</strong>: <a href="http://benjaminhawkeslewis.github.com/pear//get/thrift-0.6.2.tgz">0.6.2</a> (snapshot)</li>
+                        <li><strong>Install command</strong>: pear install benjaminhawkeslewis/thrift</li>
+                    </ul>
+
+                    <hr />
                                     <h3>thrift_protocol<small> - Cross-language RPC protocol</small></h3>
                     <p>Thrift is a software framework for scalable cross-language services development.</p>
                     <ul>
