Add phpcassa package

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@ pear install benjaminhawkeslewis/package_name-beta</code></pre>
 
                 <h2>Packages</h2>
 
+                                    <h3>phpcassa<small> - Client for Apache Cassandra</small></h3>
+                    <p>Client for Apache Cassandra</p>
+                    <ul>
+                        <li><strong>Package name</strong>: phpcassa</li>
+                        <li><strong>License</strong>: BSD</li>
+                                                <li><strong>Maintainers</strong>: Tyler Hobbs (as lead)</li>
+                                                <li><strong>Releases</strong>: <a href="http://benjaminhawkeslewis.github.com/pear//get/phpcassa-0.8.0snapshot20110607161709.tgz">0.8.0snapshot20110607161709</a> (snapshot)</li>
+                        <li><strong>Install command</strong>: pear install benjaminhawkeslewis/phpcassa</li>
+                    </ul>
+
+                    <hr />
                                     <h3>thrift<small> - Cross-language RPC protocol</small></h3>
                     <p>Thrift is a software framework for scalable cross-language services development.</p>
                     <ul>
