Add a phpcassa release

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ pear install benjaminhawkeslewis/package_name-beta</code></pre>
                     <p>Client for Apache Cassandra</p>
                     <ul>
                         <li><strong>Package name</strong>: phpcassa</li>
-                        <li><strong>License</strong>: BSD</li>
+                        <li><strong>License</strong>: MIT</li>
                                                 <li><strong>Maintainers</strong>: Tyler Hobbs (as lead)</li>
-                                                <li><strong>Releases</strong>: <a href="http://benjaminhawkeslewis.github.com/pear//get/phpcassa-0.8.0snapshot20110607161709.tgz">0.8.0snapshot20110607161709</a> (snapshot)</li>
+                                                <li><strong>Releases</strong>: <a href="http://benjaminhawkeslewis.github.com/pear//get/phpcassa-0.8.0snapshot20110607174253.tgz">0.8.0snapshot20110607174253</a> (snapshot), <a href="http://benjaminhawkeslewis.github.com/pear//get/phpcassa-0.8.0snapshot20110607161709.tgz">0.8.0snapshot20110607161709</a> (snapshot)</li>
                         <li><strong>Install command</strong>: pear install benjaminhawkeslewis/phpcassa</li>
                     </ul>
 
